# cudf-bench

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
benchmark/: __init__.py  backends.py  datagen.py  ops.py  report.py  routeb.py  runner.py  timer.py  transient.py
docs/: FINDINGS.md  issue-draft.md  writeup.md
notebooks/: colab_run.ipynb
results/: probe.csv  results.csv  routeb.csv  sweep.csv  transient.csv  transient2.csv  transient3.csv
scripts/: make_figs.py
tests/: test_datagen.py  test_ops.py  test_timer.py
